--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#3F51B5">
+    <link rel="icon" href="/images/logo_36.png">
     <style type="text/css">
         .splash-screen{
             top:0;
@@ -12,7 +13,7 @@
             position: fixed;
             width: 100%;
             height: 100%;
-            background:royalblue;
+            background: #3F51B5;
         }
         .loader {
             border: 8px solid #f3f3f3; /* Light grey */
@@ -42,6 +43,14 @@
             0% { opacity: 1; }
             100% { opacity: 0; }
         }
+        .page-content {
+            padding: 10px;
+        }
+        .my-card {
+            width: 100%;
+            margin: auto;
+        }
+
     </style>
 </head>
 <body>
@@ -53,7 +62,7 @@
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <span class="mdl-layout-title">Title</span>
+      <span class="mdl-layout-title">PWA- Intellimeet</span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
@@ -75,7 +84,10 @@
     </nav>
   </div>
   <main class="mdl-layout__content">
-    <div class="page-content"><!-- Your content goes here --></div>
+    <div class="page-content">
+        <div class="demo-card-wide mdl-card mdl-shadow--2dp my-card">
+        </div>
+    </div>
   </main>
 </div>
 </body>
@@ -83,16 +95,17 @@
 <link rel="stylesheet" type="text/css" href="css/material.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <script type="text/javascript" src="js/material.min.js"></script>
-<script>
-    window.addEventListener('load',function () {
+<script type="text/javascript">
+    window.addEventListener('load', () => {
+        initOnline();
         splashScreen();
        registerServiceWorker();
     });
-    var registerServiceWorker = function () {
-        var success = function (msg) {
+    var registerServiceWorker = () => {
+        var success = (msg) => {
             console.log('Service Worker Registered Successfully', msg);
         };
-        var error = function (err) {
+        var error = (err) => {
             console.log('Service worker registeration failed', err);
         };
         if('serviceWorker' in navigator){
@@ -101,11 +114,37 @@
                 .catch(error);
         }
     };
-    var splashScreen = function () {
+    var splashScreen = () => {
         document.getElementById('splash-screen').className += ' hide-splash-screen';
-        setTimeout(function () {
+        setTimeout(() => {
             document.getElementById('splash-screen').style.display = 'none';
         },1000)
     };
+    window.addEventListener('online', () => {
+        console.log('You are offline');
+        changeColorOnline();
+    });
+    window.addEventListener('offline', () => {
+        console.log('You are online');
+        changeColorOffline();
+    });
+
+    //initializes the color
+    var initOnline = () => {
+        if(navigator.onLine){
+            changeColorOnline();
+        }
+        else {
+            changeColorOffline();
+        }
+    };
+    var changeColorOnline = () => {
+        document.querySelector('[name=theme-color]').setAttribute('content','#3F51B5');
+        document.querySelector('.mdl-layout__header').style.backgroundColor = '#3F51B5';
+    };
+    var changeColorOffline = () => {
+        document.querySelector('[name=theme-color]').setAttribute('content','#000');
+        document.querySelector('.mdl-layout__header').style.backgroundColor = '#000';
+    }
 </script>
 </html>
