add push notification

--- a/app/post-page.html
+++ b/app/post-page.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#3F51B5">
-    <link rel="icon" href="/images/logo_36.png">
+    <link rel="icon" href="/static/images/logo_36.png">
     <style type="text/css">
         .splash-screen{
             top:0;
@@ -70,7 +70,7 @@
             color: rgb(255, 255, 255);
             text-shadow: 1px 1px 2px #000000;
             height: 176px;
-            background: url('../images/pwablog.jpg') center / cover;
+            background: url('../static/images/pwablog.jpg') center / cover;
         }
         .demo-card-wide > .mdl-card__menu {
             color: #fff;
@@ -127,11 +127,11 @@
   </main>
 </div>
 </body>
-<link rel="stylesheet" type="text/css" href="css/material.min.css">
-<link rel="stylesheet" type="text/css" href="css/material.css">
+<link rel="stylesheet" type="text/css" href="/static/css/material.min.css">
+<link rel="stylesheet" type="text/css" href="/static/css/material.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<script type="text/javascript" src="js/material.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="/static/js/material.min.js"></script>
+<script type="text/javascript" src="/static/js/main.js"></script>
 <script type="text/javascript">
     window.addEventListener('load', () => {
         initOnline();
