--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#3F51B5">
-    <link rel="icon" href="/images/logo_36.png">
+    <link rel="icon" href="/static/images/logo_36.png">
     <style type="text/css">
         .splash-screen{
             top:0;
             left:0;
+            z-index: 4;
             position: fixed;
             width: 100%;
             height: 100%;
@@ -70,7 +71,7 @@
             color: rgb(255, 255, 255);
             text-shadow: 1px 1px 2px #000000;
             height: 176px;
-            background: url('../images/pwablog.jpg') center / cover;
+            background: url('../static/images/pwablog.jpg') center / cover;
         }
         .demo-card-wide > .mdl-card__menu {
             color: #fff;
@@ -127,11 +128,11 @@
   </main>
 </div>
 </body>
-<link rel="stylesheet" type="text/css" href="css/material.min.css">
-<link rel="stylesheet" type="text/css" href="css/material.css">
+<link rel="stylesheet" type="text/css" href="/static/css/material.min.css">
+<link rel="stylesheet" type="text/css" href="/static/css/material.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<script type="text/javascript" src="js/material.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="/static/js/material.min.js"></script>
+<script type="text/javascript" src="/static/js/main.js"></script>
 <script type="text/javascript">
     window.addEventListener('load', () => {
         initOnline();
@@ -139,8 +140,14 @@
        registerServiceWorker();
     });
     var registerServiceWorker = () => {
-        var success = (msg) => {
-            console.log('Service Worker Registered Successfully', msg);
+        var success = (reg) => {
+            console.log('Service Worker Registered Successfully', reg);
+            return reg.pushManager.getSubscription()
+        };
+        let subscribe = (subscribeState) => {
+            if (subscribeState === null) {
+                subscribeUser();
+            }
         };
         var error = (err) => {
             console.log('Service worker registeration failed', err);
@@ -148,6 +155,7 @@
         if('serviceWorker' in navigator){
             navigator.serviceWorker.register('/sw-wb.js')
                 .then(success)
+                .then(subscribe)
                 .catch(error);
         }
     };
